<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.nickisai.android.latinlearner.ConjugationAndDeclension.DeclensionQuizFragment"
              android:orientation="vertical"
              android:id="@+id/declQuizBackGround"
              android:background="#fffff69b">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:id="@+id/declQuizTitle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/declTitle"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/baseTextView"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgNom"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declSgNom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plNom"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declPlNom"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgGen"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declSgGen"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plGen"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declPlGen"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgDat"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declSgDat"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plDat"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declPlDat"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgAcc"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declSgAcc"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plAcc"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declPlAcc"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sgAbl"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declSgAbl"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plAbl"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/declPlAbl"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/previousButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giveup"
            android:id="@+id/giveUpButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="#ffff4444"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/nextButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
