<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.nickisai.android.latinlearner.DeclensionQuiz.DeclensionQuizFragment"
              android:orientation="vertical"
              android:id="@+id/conjQuizBackGround"
              android:background="#fffff69b">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:id="@+id/conjQuizTitle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/conjTitle"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/baseTextView"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sg1st"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/conjSg1st"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Pl1st"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/conjPl1st"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sg2nd"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/conjSg2nd"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Pl2nd"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/conjPl2nd"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sg3rd"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/conjSg3rd"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Pl3rd"
            android:layout_weight="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/conjPl3rd"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/previousButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_weight="1"
            android:textColor="#119b88"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giveup"
            android:id="@+id/giveUpButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="#ffff4444"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/nextButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
