<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="8dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:gravity="center_vertical"
              android:background="@mipmap/asdf">

    <TextView
        android:text="@string/main_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="45sp"
        android:textIsSelectable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_description"
        android:id="@+id/textView"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingBottom="12dp"
        android:textColor="#ff050505"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/c360ca419a1261813718294ba9b573d8"
        android:adjustViewBounds="true"
        android:longClickable="false"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:scaleType="centerCrop"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:cropToPadding="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_conjdecl"
        android:id="@+id/button_declension"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:background="#9ccfc683"
        android:layout_marginBottom="3dp"
        android:nestedScrollingEnabled="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dictionary"
        android:id="@+id/button_conjugation"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:background="#9ccfc683"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_vocabulary"
        android:id="@+id/button_vocabulary"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:background="#9ccfc683"
        android:layout_weight="1"
        android:layout_marginBottom="3dp"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/button_about"
        android:background="#8fcfc683"
        android:layout_weight="1"/>

</LinearLayout>
