<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:id="@+id/dictBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:adjustViewBounds="true"
    android:background="@mipmap/ahasdf">
</ImageView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:background="#31aaaaaa">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchEditText"
            android:layout_weight="1"
            android:hint="@string/dicthint"
            android:inputType="text|textEmailAddress"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toEnglish"
            android:id="@+id/toEnglishRadio"
            android:layout_weight="0"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toLatin"
            android:id="@+id/toLatinRadio"
            android:layout_weight="0"
            android:layout_marginRight="2sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dictionaryListView"
        />
</LinearLayout>

</FrameLayout>